# webapp

backend/: .dockerignore  .env.backup  .flake8  .gitignore  Caddyfile  Dockerfile  alembic.ini  audio_profiler.py  backend.dockerfile  celery.dockerfile  celeryworker.py  database.py  docker-compose.yaml  docker-compose.yaml.backup  docker-compose.yml  dockercompose-app.yml  dockercompose-celery.yml  dockercompose-db.yml  dockercompose-monitoring.yml  dockercompose-proxy.yml  emailSender.py  entrypoint.sh  env.py  ffmpeg_profiler.py  locustfile.py  main.py  models.py  prestart.sh  pyproject.toml  pytest.ini  rebuild.sh  start-reload.sh  start.sh  utils.py  worker-start.sh
backend/alembic/: env.py
backend/alembic/versions/: 23283ad23884_initial_migrate_schema.py  2e54604d576a_initial_migrate.py  3a650f39f653_initial_migrate.py  60b7b4a547c4_adding_discord_notification_toggleable.py  668246f0a619_init.py  83097e4e766b_initial_migration.py  af08ae48c3e9_initial_migrate_schema.py  d62b549c8405_initial_migrate.py  e9e5db1ebfa5_initial_migrate.py
backend/docker-nginx-auto-ssl/snippets/: server-proxy.conf
backend/emailUtils/: basecode.mjml  forgot.html  job_cancelled.html  job_failed.html  job_initiated.html  job_success.html  payment_failed.html  payment_initiated.html  payment_successfull.html  registration.html
backend/etc/dashboards/: caddy-monitoring.json  celery-monitoring.json  fastapi-observability.json
backend/etc/prometheus/: prometheus.yml
backend/invoice/: index.html
backend/nginx-conf/: app.tnsr.ai.conf  backend.tnsr.ai.conf
backend/process/: image_process.py
backend/process/image/: process.py
backend/routers/: auth.py  billing.py  content.py  dashboard.py  dev.py  jobs.py  machines.py  options.py  reindex_job.py  settings.py  upload.py
backend/script_utils/: currency.json  gpu_workers.py  symbol.json  util.py  vast.py
backend/tests/: auth_test.py  billing_test.py  conftest.py  content_test.py  dashboard_test.py  job_test.py  main_test.py  settings_test.py  test_config.py  upload_test.py
(+101 files in other folders)
