[tool.poetry]
name = "env"
version = "0.1.0"
description = "tnsr.ai backend"
authors = ["Amit Bera <amitalokbera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "2.0.29"
alembic = "^1.11.1"
pydantic = "^1.10.8"
psycopg2-binary = "^2.9.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.7.0"
boto3 = "^1.26.160"
tqdm = "^4.65.0"
jwcrypto = "^1.5.0"
google-auth = "^2.21.0"
authlib = "^1.2.1"
starlette-session = "^0.4.3"
fastapi-sso = "^0.6.4"
ffmpeg-python = "^0.2.0"
opencv-contrib-python = "^4.8.0.74"
celery = {extras = ["redis"], version = "^5.3.1"}
redis = "^4.6.0"
watchdog = "^3.0.0"
llvmlite = "0.40.1"
librosa = "0.10.0.post2"
matplotlib = "3.7.0"
pillow = "^10.0.0"
slowapi = "^0.1.8"
hruid = "^0.0.3"
mjml = "^0.9.1"
pystache = "^0.6.5"
stripe = "^7.0.0"
eventlet = "^0.33.3"
weasyprint = "^60.1"
pyhtml2pdf = "^0.0.7"
httpx = "0.23.3"
fakeredis = "^2.20.0"
pytest = "^7.4.3"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"
pytest-celery = "^0.0.0"
pytest-watch = "^4.2.0"
flake8 = "^6.1.0"
gunicorn = "^21.2.0"
prometheus-client = {git = "https://github.com/prometheus/client_python.git"}
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-logging = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-distro = "^0.43b0"
fastapi-limiter = "^0.1.6"
locust = "^2.20.1"
websockets = "^12.0"
python-json-logger = "^2.0.7"
flower = "^2.0.1"
bcrypt = "4.0.1"
celery-redbeat = "^2.2.0"
replicate = "^0.25.1"
pandas = "2.0.0"
runpod = "^1.6.2"
vastai = "^0.2.2"
humanfriendly = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
